log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 09:16:59 PM UTC: 
 tests:  0|6
total_score: 0/70
d3ac483
Thu 30 Mar 2023 02:57:25 AM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: unknown type name ‘Arraylist’; did you mean ‘ArrayList’?
   14 |   Arraylist *nuevaLista = (Arraylist*) malloc(sizeof(Arraylist));
      |   ^~~~~~~~~
      |   ArrayList
arraylist.c:14:28: error: ‘Arraylist’ undeclared (first use in this function); did you mean ‘ArrayList’?
   14 |   Arraylist *nuevaLista = (Arraylist*) malloc(sizeof(Arraylist));
      |                            ^~~~~~~~~
      |                            ArrayList
arraylist.c:14:28: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:14:38: error: expected expression before ‘)’ token
   14 |   Arraylist *nuevaLista = (Arraylist*) malloc(sizeof(Arraylist));
      |                                      ^
arraylist.c:17:13: error: request for member ‘capacity’ in something not a structure or union
   17 |   nuevaLista->capacity = 2;
      |             ^~
arraylist.c:18:13: error: request for member ‘size’ in something not a structure or union
   18 |   nuevaLista->size = 0;
      |             ^~
arraylist.c:19:13: error: request for member ‘data’ in something not a structure or union
   19 |   nuevaLista->data = (void*) malloc(sizeof(void));
      |             ^~
arraylist.c:21:12: error: returning ‘int *’ from a function with incompatible return type ‘ArrayList *’ {aka ‘struct ArrayList *’} [-Werror=incompatible-pointer-types]
   21 |     return nuevaLista;
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
413a8ce
Thu 30 Mar 2023 02:58:26 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
244517c
Thu 30 Mar 2023 03:28:45 AM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
ae94508
Thu 30 Mar 2023 04:24:08 AM UTC: 
 arraylist.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|4
total_score: 20/70
508048e
Thu 30 Mar 2023 03:40:29 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:44:25: error: expected expression before ‘)’ token
   44 |   for(int j = l->size;  )
      |                         ^
arraylist.c:44:11: error: unused variable ‘j’ [-Werror=unused-variable]
   44 |   for(int j = l->size;  )
      |           ^
cc1: all warnings being treated as errors
Compilation failed
eed588e
Thu 30 Mar 2023 03:44:31 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
dcc9e9e
Thu 30 Mar 2023 03:44:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
6f5b408
Thu 30 Mar 2023 04:00:44 PM UTC: 
 arraylist.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  8|2
total_score: 40/70
70df6d8
Thu 30 Mar 2023 04:03:51 PM UTC: 
 arraylist.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|2
total_score: 40/70
e1e80b6
Thu 30 Mar 2023 04:17:06 PM UTC: 
 arraylist.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:58:20: error: expected ‘)’ before ‘l’
   58 |   if(i < 0 || i >=1 l->size) return NULL;
      |     ~              ^~
      |                    )
arraylist.c:67:12: error: expected ‘;’ before ‘:’ token
   67 |   l->size++:
      |            ^
      |            ;
arraylist.c:60:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   60 |   void *aux = l->data[i];
      |         ^~~
arraylist.c: In function ‘get’:
arraylist.c:77:20: error: expected ‘)’ before ‘l’
   77 |   if(i < 0 || i >=1 l->size) return NULL;
      |     ~              ^~
      |                    )
arraylist.c: In function ‘pop’:
arraylist.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb619a8
Thu 30 Mar 2023 04:17:18 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:58:20: error: expected ‘)’ before ‘l’
   58 |   if(i < 0 || i >=1 l->size) return NULL;
      |     ~              ^~
      |                    )
arraylist.c:67:12: error: expected ‘;’ before ‘:’ token
   67 |   l->size--:
      |            ^
      |            ;
arraylist.c:60:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   60 |   void *aux = l->data[i];
      |         ^~~
arraylist.c: In function ‘get’:
arraylist.c:77:20: error: expected ‘)’ before ‘l’
   77 |   if(i < 0 || i >=1 l->size) return NULL;
      |     ~              ^~
      |                    )
arraylist.c: In function ‘pop’:
arraylist.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
727ab10
